--- a/checkout-ui-custom/checkout5-custom.css
+++ b/checkout-ui-custom/checkout5-custom.css
@@ -1,3 +1,7 @@
-#teste {
-  color: blue;
-}
+/* /files/checkout5-custom.css */
+
+/* Displays the option to enter a foreign document */
+.document-box { display: block; }
+
+/* Displays the option to enter an international phone */
+.phone-box { display: block; }
