--- a/checkout-ui-custom/src/checkout6-custom.scss
+++ b/checkout-ui-custom/src/checkout6-custom.scss
@@ -1,3 +1,5 @@
+/* Content copied from "checkout5-custom.css" at 2019-03-01T05:12:59.334Z */
+
 /* /files/checkout5-custom.css */
 
 /* Displays the option to enter a foreign document */
