--- a/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout6-custom.css
@@ -1,9 +1,1 @@
-/* Content copied from "checkout5-custom.css" at 2019-03-01T05:12:59.334Z */
-
-/* /files/checkout5-custom.css */
-
-/* Displays the option to enter a foreign document */
-.document-box { display: block; }
-
-/* Displays the option to enter an international phone */
-.phone-box { display: block; }
+.document-box{display:block}.phone-box{display:block}
