--- a/checkout-ui-custom/src/checkout6-custom.scss
+++ b/checkout-ui-custom/src/checkout6-custom.scss
@@ -56,6 +56,10 @@
         color: #222222 !important;
         border: 1px solid #3B3B3B !important;
       }
+
+      &.error {
+        border: 1px solid red !important;
+      }
     }
   }
 
