fix: revision completa de funcionalidad y estilos

--- a/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout6-custom.css
@@ -1,3 +1,7 @@
+.vtex-omnishipping-1-x-addressForm {
+  margin-bottom: 15px !important;
+}
+
 .vtex-omnishipping-1-x-deliveryGroup {
   margin-top: 10px !important;
 }
