--- a/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout6-custom.css
@@ -5,18 +5,21 @@
 .vtex-omnishipping-1-x-deliveryGroup {
   margin-top: 10px !important;
 }
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step {
+  margin-bottom: 25px;
+}
 .vtex-omnishipping-1-x-deliveryGroup .custom-step-border {
   border-top: 1px solid #B2B2B2;
   padding-top: 25px;
 }
 .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-title {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
   line-height: 140%;
   color: #222222;
 }
 .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-subtitle {
-  font-size: 13px;
+  font-size: 12px;
   line-height: 140%;
   color: #535353;
 }
@@ -33,20 +36,20 @@
   color: #222222;
 }
 .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-input input {
-  border: 1px solid #B2B2B2;
-  box-sizing: border-box;
-  border-radius: 4px;
+  border: 1px solid #B2B2B2 !important;
+  box-sizing: border-box !important;
+  border-radius: 4px !important;
+}
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-input input.error {
+  border: 1px solid red !important;
 }
 @media (min-width: 1024px) {
-  .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-input .tfg-custom-title {
+  .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-title {
     font-size: 13px;
   }
-  .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-input .tfg-custom-subtitle {
+  .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-subtitle {
     font-size: 12px;
   }
-}
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step {
-  margin-bottom: 25px;
 }
 .vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-input label {
   font-family: Inter;
@@ -134,9 +137,6 @@
   .vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-checkbox .tfg-checkbox-text {
     font-size: 14px;
   }
-}
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-tvid-step {
-  margin-bottom: 25px;
 }
 
 #tfg-custom-tvrica-msg {
