--- a/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout6-custom.css
@@ -8,99 +8,86 @@
 .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step {
   margin-bottom: 25px;
 }
-.vtex-omnishipping-1-x-deliveryGroup .custom-step-border {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step.custom-step-border {
   border-top: 1px solid #B2B2B2;
   padding-top: 25px;
 }
-.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-title {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step .tfg-custom-title {
   font-size: 16px;
-  font-weight: bold;
-  line-height: 140%;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: -0.25px;
   color: #222222;
 }
-.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-subtitle {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step .tfg-custom-subtitle {
   font-size: 12px;
-  line-height: 140%;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0.25px;
   color: #535353;
 }
-.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-input {
-  margin-top: 15px;
-}
-.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-input label {
-  font-family: Inter;
-  font-style: normal;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 16px;
-  letter-spacing: -0.25px;
-  color: #222222;
-}
-.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-input input {
-  border: 1px solid #B2B2B2 !important;
-  box-sizing: border-box !important;
-  border-radius: 4px !important;
-}
-.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-input input.error {
-  border: 1px solid red !important;
+@media (min-width: 640px) {
+  .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step .tfg-custom-title {
+    line-height: 22px;
+  }
 }
 @media (min-width: 1024px) {
-  .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-title {
-    font-size: 13px;
-  }
-  .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-subtitle {
-    font-size: 12px;
+  .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step .tfg-custom-title {
+    line-height: 20px;
   }
 }
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-input label {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step .tfg-custom-input {
+  margin-top: 15px;
+}
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step .tfg-custom-input label {
   font-size: 12px;
+  font-weight: 500;
   line-height: 16px;
-  letter-spacing: -0.25px;
+  letter-spacing: 0.25px;
   color: #222222;
-  margin-bottom: 10px;
 }
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-input .tfg-custom-selector {
-  font-family: Inter !important;
-  font-size: 15px !important;
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step .tfg-custom-input input {
+  border: 1px solid #B2B2B2;
+  border-radius: 4px !important;
+}
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-selector {
+  font-size: 14px !important;
   color: #848484 !important;
   line-height: 20px !important;
   letter-spacing: -0.25px !important;
   padding: 12px 16px !important;
-  border: 1px solid #E6E6E6 !important;
+  box-shadow: none !important;
+  border: 1px solid #E6E6E6;
   border-radius: 4px !important;
   -webkit-appearance: none;
   appearance: none;
   background: white url("data:image/svg+xml;utf8,<svg viewBox='0 0 140 140' width='12' height='12' xmlns='http://www.w3.org/2000/svg'><g><path d='m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z' fill='%23222222'/></g></svg>") no-repeat;
   background-position: right 12px top 50%;
 }
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-input .tfg-custom-selector option {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-selector option {
   color: #222222;
 }
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-input .tfg-custom-selector.tfg-input-completed {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-selector.tfg-input-completed {
   color: #222222 !important;
   border: 1px solid #3B3B3B !important;
 }
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-input .tfg-custom-selector.error {
-  border: 1px solid red !important;
-}
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-checkbox {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-checkbox {
   margin: 20px 0px;
 }
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-checkbox .tfg-checkbox-text {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-checkbox .tfg-checkbox-text {
   padding-left: 17px;
-  font-size: 15px;
-  line-height: 140%;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: -0.25px;
   color: #222222;
 }
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-checkbox input[type=checkbox] {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-checkbox input[type=checkbox] {
   visibility: hidden;
 }
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-checkbox input[type=checkbox] + span {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-checkbox input[type=checkbox] + span {
   position: relative;
 }
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-checkbox input[type=checkbox] + span::before {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-checkbox input[type=checkbox] + span::before {
   content: "";
   background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 1H3C1.89543 1 1 1.89543 1 3V17C1 18.1046 1.89543 19 3 19H17C18.1046 19 19 18.1046 19 17V3C19 1.89543 18.1046 1 17 1Z' stroke='%23222222' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
   background-repeat: no-repeat;
@@ -113,11 +100,14 @@
   top: -2px;
   left: -10px;
 }
-.vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-checkbox input[type=checkbox]:checked + span::before {
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-checkbox input[type=checkbox]:checked + span::before {
   content: "";
-  background-image: url("data:image/svg+xml,%3Csvg width='21' height='20' viewBox='0 0 21 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 9L10 12L20 2M19 10V17C19 17.5304 18.7893 18.0391 18.4142 18.4142C18.0391 18.7893 17.5304 19 17 19H3C2.46957 19 1.96086 18.7893 1.58579 18.4142C1.21071 18.0391 1 17.5304 1 17V3C1 2.46957 1.21071 1.96086 1.58579 1.58579C1.96086 1.21071 2.46957 1 3 1H14' stroke='%23222222' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  background-image: url("data:image/svg+xml,%3Csvg width='16' height='13' viewBox='0 0 16 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15.7992 0.218694C16.0669 0.510285 16.0669 0.983048 15.7992 1.27464L5.74202 12.2257C5.47423 12.5173 5.04006 12.5173 4.77227 12.2257L0.200841 7.24797C-0.066947 6.95638 -0.066947 6.48362 0.200841 6.19203C0.468629 5.90043 0.902799 5.90043 1.17059 6.19203L5.25714 10.6418L14.8294 0.218694C15.0972 -0.0728979 15.5314 -0.0728979 15.7992 0.218694Z' fill='white'/%3E%3C/svg%3E%0A");
+  background-color: #813992;
+  border-radius: 2.5px;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: auto;
+  background-position: center;
   width: 20px;
   height: 20px;
   display: block;
@@ -126,20 +116,11 @@
   top: -2px;
   left: -10px;
 }
-@media (min-width: 1024px) {
-  .vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-input label {
-    font-weight: 500;
-    font-size: 12px;
-  }
-  .vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-input .tfg-custom-selector {
-    font-size: 14px !important;
-  }
-  .vtex-omnishipping-1-x-deliveryGroup #tfg-custom-furniture-step .tfg-custom-checkbox .tfg-checkbox-text {
-    font-size: 14px;
-  }
-}
 
 #tfg-custom-tvrica-msg {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
   padding: 8px;
   margin: 10px 0px;
   border-radius: 4px;
@@ -172,8 +153,17 @@
 }
 .vtex-omnishipping-1-x-deliveryChannelsWrapper.custom-disabled #shipping-option-pickup-in-point {
   position: relative;
+  border: none;
   background: #E6E6E6 !important;
 }
 .vtex-omnishipping-1-x-deliveryChannelsWrapper.custom-disabled #shipping-option-pickup-in-point span {
   color: #A3A3A3 !important;
+}
+
+p.error label {
+  color: #9D1414 !important;
+}
+p.error input,
+p.error select {
+  border: 1px solid #9D1414 !important;
 }
