--- a/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout6-custom.css
@@ -50,6 +50,10 @@
   border: 1px solid #B2B2B2;
   border-radius: 4px !important;
 }
+.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step .tfg-custom-input .tfg-input-completed {
+  color: #222222 !important;
+  border: 1px solid #3B3B3B !important;
+}
 .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-selector {
   font-size: 14px !important;
   color: #848484 !important;
@@ -57,7 +61,7 @@
   letter-spacing: -0.25px !important;
   padding: 12px 16px !important;
   box-shadow: none !important;
-  border: 1px solid #E6E6E6;
+  border: 1px solid #B2B2B2;
   border-radius: 4px !important;
   -webkit-appearance: none;
   appearance: none;
@@ -66,10 +70,6 @@
 }
 .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-selector option {
   color: #222222;
-}
-.vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-selector.tfg-input-completed {
-  color: #222222 !important;
-  border: 1px solid #3B3B3B !important;
 }
 .vtex-omnishipping-1-x-deliveryGroup .tfg-custom-step#tfg-custom-furniture-step .tfg-custom-checkbox {
   margin: 20px 0px;
@@ -160,9 +160,6 @@
   color: #A3A3A3 !important;
 }
 
-p.error label {
-  color: #9D1414 !important;
-}
 p.error input,
 p.error select {
   border: 1px solid #9D1414 !important;
