--- a/checkout-ui-custom/src/checkout6-custom.scss
+++ b/checkout-ui-custom/src/checkout6-custom.scss
@@ -59,6 +59,11 @@
         border: 1px solid #B2B2B2;
         border-radius: 4px !important;
       }
+
+      .tfg-input-completed {
+        color: #222222 !important;
+        border: 1px solid #3B3B3B !important;
+      }
     }
 
     &#tfg-custom-furniture-step {
@@ -70,7 +75,7 @@
         padding: 12px 16px !important;
         box-shadow: none !important;
 
-        border: 1px solid #E6E6E6;
+        border: 1px solid #B2B2B2;
         border-radius: 4px !important;
 
         // Hiding native arrow
@@ -82,11 +87,6 @@
 
         option {
           color: #222222;
-        }
-
-        &.tfg-input-completed {
-          color: #222222 !important;
-          border: 1px solid #3B3B3B !important;
         }
       }
 
@@ -201,9 +201,6 @@
 
 // INPUT ERROR
 p.error {
-  label {
-    color: #9D1414 !important;
-  }
 
   input,
   select {
