--- a/checkout-ui-custom/src/checkout6-custom.scss
+++ b/checkout-ui-custom/src/checkout6-custom.scss
@@ -146,7 +146,7 @@
 }
 
 // ALERTS
-#tfg-custom-tvrica-msg {
+.tfg-custom-msg {
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
