--- a/checkout-ui-custom/src/checkout6-custom.scss
+++ b/checkout-ui-custom/src/checkout6-custom.scss
@@ -1,16 +1,26 @@
+.tfg-mtop-25 {
+  margin-top: 25px;
+}
+
 .vtex-omnishipping-1-x-addressForm {
   margin-bottom: 15px !important;
 }
 
-.vtex-omnishipping-1-x-deliveryGroup {
+.vtex-omnishipping-1-x-address {
   margin-top: 10px !important;
 
   .tfg-custom-step {
     margin-bottom: 25px;
 
     &.custom-step-border {
-      border-top: 1px solid #B2B2B2;
       padding-top: 25px;
+      border-top: 1px solid #B2B2B2;
+
+      &:last-child {
+        margin-bottom: 0;
+        padding-bottom: 25px;
+        border-bottom: 1px solid #B2B2B2;
+      }
     }
 
     .tfg-custom-title {
