--- a/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout6-custom.css
@@ -6,11 +6,8 @@
   margin-bottom: 15px !important;
 }
 
-.vtex-omnishipping-1-x-address {
-  margin-top: 10px !important;
-}
 .vtex-omnishipping-1-x-address .tfg-custom-step {
-  margin-bottom: 25px;
+  margin-top: 25px;
 }
 .vtex-omnishipping-1-x-address .tfg-custom-step.custom-step-border {
   padding-top: 25px;
@@ -129,17 +126,18 @@
 .tfg-custom-msg {
   font-family: Inter;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 500;
   padding: 8px;
   margin: 10px 0px;
   border-radius: 4px;
-  background: #F7EFF9;
+  background: #F1EFFE;
 }
 .tfg-custom-msg .tfg-custom-text {
-  font-size: 13px;
-  line-height: 140%;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.25px;
   margin-bottom: 0;
-  color: #222222;
+  color: #250EB9;
 }
 @media (min-width: 1024px) {
   .tfg-custom-msg {
