feat: revisión de guardado en masterdata + ajustes + incluir enlace para costes envío

--- a/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout6-custom.css
@@ -114,6 +114,21 @@
   top: -2px;
   left: -10px;
 }
+.vtex-omnishipping-1-x-deliveryGroup p.vtex-omnishipping-1-x-shippingSectionTitle {
+  grid-template-columns: 50% 50%;
+  display: grid;
+}
+.vtex-omnishipping-1-x-deliveryGroup p.vtex-omnishipping-1-x-shippingSectionTitle .furniture-fees-link {
+  text-align: right;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: -0.25px;
+  text-decoration-line: underline;
+  color: #813992;
+}
 
 .tfg-custom-msg {
   font-family: Inter;
