--- a/checkout-ui-custom/src/checkout6-custom.scss
+++ b/checkout-ui-custom/src/checkout6-custom.scss
@@ -237,7 +237,7 @@ p.error {
 }
 
 
-.ship-receiverName, .ship-complement, .ship-notApplicable {
+.ship-receiverName, .ship-complement, .ship-notApplicable, .ship-street, .ship-complement, .ship-city, .ship-state {
   display: none!important;
 }
 
