--- a/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout6-custom.css
@@ -185,7 +185,12 @@ p.error select {
   border: 1px solid #9D1414 !important;
 }
 
-.ship-receiverName, .ship-complement, .ship-notApplicable, .ship-street, .ship-complement, .ship-city, .ship-state {
+.ship-receiverName,
+.ship-complement,
+.ship-notApplicable,
+.ship-street,
+.ship-complement,
+.ship-city {
   display: none !important;
 }
 
